# datasharingApp

./: .gitignore  cert.key  cert.pem  fix-script-paths.js  index.html  info.txt  landing.html  node-instructions.html  package-lock.json  package.json  publish.html  signup.html  signup.js  sw.js  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yml  static.yml
assets/: app.js  dcrypt_wasm-BtsyuX72.js  dcrypt_wasm-Covpn6oq.js  dcrypt_wasm-Dm3nAcA-.js  dcrypt_wasm-_pajARzh.js  dcrypt_wasm_bg-B-F1cFiv.wasm  dcrypt_wasm_bg-DLghmU8k.wasm  dcrypt_wasm_bg-Do6pL5Si.wasm  dcrypt_wasm_bg-ofkmGxKs.wasm  index-B25xZCys.js  index-B9qE55Zo.js  index-BLAL7rHE.js  index-BMDxSvyf.js  index-BOa58xd0.js  index-BT4juNih.js  index-BUy-sVRM.js  index-Bm953IzT.js  index-BmoBzrSo.js  index-BtkP9aJB.js  index-CDmXlNIp.js  index-CIeqppt_.js  index-COWpuMzw.js  index-CPf6kYoZ.js  index-CTMjO8iY.js  index-CYBE850P.js  index-CYEEnhEV.js  index-CflHNU2Y.js  index-Ci6cvavy.js  index-ClPtxMxX.js  index-CnPfPmUq.js  index-CqfPuyVX.js  index-D6Wfvb60.js  index-DAqu-SK9.js  index-DFXeV0xp.js  index-DNzG7lHM.js  index-DOWN2ExK.js  index-DUyIz1-q.js  index-DtUKMdr4.js  index-Dv5gMvrb.css  index-DxnvkhKd.js  (+12 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  snippet.rs
src/: App.jsx  index.css  index.html
web/: dht.js  firebase.js  index.html  index.js  landing.css  landing.html  node-instructions.html  node-instructions.js  package-lock.json  routing.js  signup.html  signup.js  styles.css  testPeers.js  ui.js  utils.js  vite.config.js  wasm.js
web/public/: dashboard.html  (+5 more)
(+26 files in other folders)
