[package]
name = "dcrypt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3.77"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"  # Added this dependency
bincode = "1.3.3"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
getrandom = { version = "0.2.15", features = ["js"] }
hex = "0.4.3"

[profile.release]
opt-level = 3