[package]
name = "dcrypt-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
js-sys = "0.3.77"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"  # Added this dependency
bincode = "1.3.3"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] } # Added for console logging
hex = "0.4.3"
console_error_panic_hook = "0.1" # Added for better error reporting

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O"] # Simplified to just use optimization, removed --memory-usage
# Alternatively, disable wasm-opt if not needed:
# wasm-opt = false